# LightRec

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  PROJECT.md  PROMPTS.md  README.md  test_spsc.cpp
shaders/: RgbToNv12.hlsl
src/: main.cpp
src/audio/: AudioEncoder.cpp  AudioEncoder.h  AudioRingBuffer.h  IAudioSource.h  WASAPICapture.cpp  WASAPICapture.h
src/capture/: CaptureCommon.h  CaptureConfig.h  CaptureFactory.cpp  CaptureFactory.h  DXGICapture.cpp  DXGICapture.h  IFrameSource.h  WGCCapture.cpp  WGCCapture.h
src/clip/: AudioClipBuffer.cpp  AudioClipBuffer.h  EncodedPacket.h  RingBuffer.cpp  RingBuffer.h
src/config/: Config.cpp  Config.h  Defaults.h
src/core/: Application.cpp  Application.h  D3D11Device.cpp  D3D11Device.h  GpuConverter.cpp  GpuConverter.h  Pipeline.cpp  Pipeline.h  TexturePool.cpp  TexturePool.h
src/encoder/: AMFEncoder.cpp  AMFEncoder.h  EncoderFactory.cpp  EncoderFactory.h  IEncoder.h  MFTEncoder.cpp  MFTEncoder.h  NVENCEncoder.cpp  NVENCEncoder.h  QSVEncoder.cpp  QSVEncoder.h
src/export/: Exporter.cpp  Exporter.h
src/mux/: IMuxer.h  MP4Muxer.cpp  MP4Muxer.h
src/ui/: HotkeyManager.cpp  HotkeyManager.h  OverlayWindow.cpp  OverlayWindow.h  SettingsDialog.cpp  SettingsDialog.h  TrayIcon.cpp  TrayIcon.h  UIConfig.cpp  UIConfig.h
src/util/: ComInit.h  HRCheck.h  Log.cpp  Log.h  SPSCQueue.h
tests/audio/: test_audio.cpp
tests/capture/: test_capture.cpp
tests/clip/: test_ring_buffer.cpp
tests/config/: test_config.cpp
tests/core/: Pipeline_test.cpp  test_texture_pool.cpp
tests/encoder/: Makefile  test_encoder.cpp
tests/encoder/mock_headers/clip/: EncodedPacket.h
tests/encoder/mock_headers/config/: Config.h
tests/encoder/mock_headers/core/: D3D11Device.h
tests/export/: test_export.cpp
tests/mux/: MP4Muxer_test.cpp  standalone_test.cpp
tests/util/: test_spsc_queue.cpp
